# AIrtifex

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
airtifex-api/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  config.yaml
airtifex-api/assets/: .gitignore
airtifex-api/migrations/postgres/: 02_users.sql  03_chats.sql  04_chat_entries.sql  05_image_models.sql  06_images.sql  07_image_samples.sql
airtifex-api/migrations/sqlite/: 01_llm_models.sql  02_users.sql  03_chats.sql  04_chat_entries.sql  06_images.sql  07_image_samples.sql  08_prompts.sql
airtifex-api/src/: auth.rs  config.rs  errors.rs  guard.rs  id.rs  lib.rs  main.rs  permissions.rs  queue.rs
airtifex-api/src/llm/: llama.rs  mod.rs
airtifex-api/src/models/: chat.rs  chat_entry.rs  image.rs  image_model.rs  image_sample.rs  llm.rs  mod.rs  prompt.rs  user.rs
airtifex-api/src/routes/: mod.rs  static.rs
airtifex-api/src/routes/api/: chat.rs  image.rs  mod.rs  prompt.rs  users.rs
airtifex-core/: Cargo.toml
airtifex-core/src/: api_response.rs  auth.rs  image.rs  lib.rs  llm.rs  query.rs  user.rs
airtifex-web/: Cargo.toml  Makefile  Trunk.toml  index.html
airtifex-web/assets/: favicon.xcf  favicon_combined.xcf
airtifex-web/public/css/: style.css
airtifex-web/src/: api.rs  inference.rs  lib.rs  main.rs  web_util.rs
airtifex-web/src/components/: credentials.rs  email_validation.rs  go_back_button.rs  list_page_control.rs  loading.rs  mod.rs  modal.rs  navbar.rs  password_validation.rs  status_message.rs  titled_child_page.rs
airtifex-web/src/components/users/: account_type_selector.rs  list_entry.rs  mod.rs
airtifex-web/src/pages/: home.rs  login.rs  mod.rs
airtifex-web/src/pages/chat/: mod.rs  view.rs
airtifex-web/src/pages/home/: mod.rs
airtifex-web/src/pages/home/dashboard/: chat.rs  image.rs  mod.rs
airtifex-web/src/pages/image/: mod.rs  view.rs
airtifex-web/src/pages/prompt/: history.rs  mod.rs  view.rs
airtifex-web/src/pages/users/: add.rs  edit.rs  mod.rs  password_change.rs  profile.rs
assets/: airtifex-api.service  api-basic-config.yaml  docker-entry.sh  nginx-vhost.conf
data/: README
