[package]
name = "airtifex-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "airtifex_api"

[dependencies]
airtifex-core = { path = "../airtifex-core", features = ["sql"] }

dotenv = "0.15.0"
thiserror = "1"
axum = { version = "0.6", features = ["headers", "multipart"] }
axum-extra = { version = "0.6", features = ["cookie-private"] }
tokio = { version = "1", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
log = "0.4"
base64 = "0.13"
jsonwebtoken = "8"
rand = "0.8"
once_cell = "1"
hyper = "0.14"
tower-http = { version = "0.4", features = ["trace"] }
include_dir = "0.7"
mime_guess = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
futures-util = "0.3.27"
clap = { version = "4.1.11", features = ["derive"] }
bitflags = "2.0.2"
uuid = { version = "0.8", features = ["serde", "v4", "v1"]}
llama-rs = { path = "../../llama-rs/llama-rs" }
flume = "0.10.14"
num_cpus = "1.15.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "macros", "migrate", "offline", "chrono", "uuid"]

[features]
postgres = ["sqlx/postgres", "airtifex-core/postgres"]
sqlite = ["sqlx/sqlite", "airtifex-core/sqlite"]
default = ["sqlite"]


[dev-dependencies]
tempdir = "0.3"
