[package]
name = "airtifex-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sha3 = "0.10"
url = "2"
log = "0.4"
debug_stub_derive = "0.3.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
optional = true
features = ["runtime-tokio-rustls", "macros", "migrate", "offline", "chrono", "uuid"]


[features]
sql = ["sqlx"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
